# serializer version: 1
# name: test_definition_version_deterministic
  'cba1243c527957f10b0c0469d3b333a0af5228a283c93b8418703c5b57167643'
# ---
# name: test_definition_version_excludes_project
  dict({
    'definition_version_a': '381d957f804efc68bf670e22ede51de8768ce922cafcbe22ad111a0f3f15880c',
    'definition_version_b': '381d957f804efc68bf670e22ede51de8768ce922cafcbe22ad111a0f3f15880c',
    'definition_versions_same': True,
    'feature_version_a': '3731d5aef6d53cfda612433171c52401406f94fd1c3482e7754ef2b24d85d170',
    'feature_version_b': '3731d5aef6d53cfda612433171c52401406f94fd1c3482e7754ef2b24d85d170',
    'feature_versions_same': True,
  })
# ---
# name: test_feature_version_unchanged_by_project
  'fcd6985a4dea45488450141be5c4712fd47781b4d0a7e42f04760c376eadf42f'
# ---
# name: test_feature_with_deps_same_definition_version
  dict({
    'downstream_definition_version': 'a5711c1fc9c4ceb93edc1a358d87f24215873f517a5f24085881f9cbe58b4af7',
    'downstream_feature_version': 'b7478f4be75eea0fa8d468df3f33cc8033cde080313e4ef783222fd65416f8e2',
    'upstream_definition_version': 'de0fa05d7f0e9cff0d95c52eb8f8bf2981864b82af24ad8f302bd4521d65c68b',
    'upstream_feature_version': '8fd9019605c792a83a2cab5aaac4aea7a1e8524e51b728c0e02beb8032ee0ec1',
  })
# ---
# name: test_project_in_graph_snapshot
  dict({
    'feature_keys': list([
      'feature1',
      'feature2',
    ]),
    'has_definition_version_feature1': True,
    'has_definition_version_feature2': True,
    'has_project_feature1': True,
    'has_project_feature2': True,
  })
# ---
# name: test_provenance_by_field_unchanged_across_graphs
  dict({
    'field1': '9cb9f5bd9b380278e273033d16f07feabda7bdf5b813e9941b0f29e63b20efdb',
    'field2': '0b485f68befbb7abb029b43a698161745c63259b8ad0bc00260b7da4b9830243',
  })
# ---
